--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -12,6 +12,19 @@ authors:
     href: http://snap.uaf.edu/
     html: <img src="https://raw.githubusercontent.com/leonawicz/leonawicz.github.io/master/assets/img/snap_symbol.svg?sanitize=true" height="24" />  Scenarios Network for Alaska and Arctic Planning
 
+reference:
+- title: Package
+  contents:
+  - snapclim
+- title: Metadata
+  contents:
+  - collections
+  - location_sets
+  - climate_locations
+- title: Climate data
+  contents:
+  - climdata
+
 navbar:
   type: inverse
   right:
