--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -18,7 +18,7 @@ reference:
   - snapclim
 - title: Metadata
   contents:
-  - collections
+  - climate_collections
   - location_sets
   - climate_locations
 - title: Climate data
