--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,9 @@
+pandoc: 1.19.2.1
+pkgdown: 1.1.0
+pkgdown_sha: ~
+articles:
+  snapclim: snapclim.html
 urls:
   reference: http://leonawicz.github.io//reference
   article: http://leonawicz.github.io//articles
-articles:
-  snapclim: snapclim.html
 
